--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Header com Logo -->
         <header class="header">
             <div class="logo-section">
-                <img src="ChatGPT Image 9 de mai. de 2025, 16_26_47.png" alt="Borany Construtora" class="logo">
+                <img src="borany-logo.png" alt="Borany Construtora" class="logo">
                 <div class="company-info">
                     <p>Departamento Pessoal</p>
                 </div>
@@ -24,7 +24,7 @@
         <section class="main-title">
             <div class="title-content">
                 <div class="app-icon">
-                    <img src="PORTAL DO EMPREGADO.jpg" alt="Portal do Empregado" class="app-logo">
+                    <img src="app-icon.jpg" alt="Portal do Empregado" class="app-logo">
                 </div>
                 <div class="title-text">
                     <h2>PORTAL DO EMPREGADO</h2>
